--- a/demo/new_file.html
+++ b/demo/new_file.html
@@ -15,6 +15,19 @@
 				enumable:true,
 				
 			})
+			var obj={
+				a:1
+			}
+			
+			window.setInterval(function(){
+				console.log(obj.a)
+			},100)
+			
+			Object.defineProperty(obj,'a',{
+				get : function(){
+					return "a"
+				}
+			})
 		</script>
 	</body>
 </html>
