--- a/demo/new_file.html
+++ b/demo/new_file.html
@@ -15,6 +15,15 @@
 				enumable:true,
 				
 			})
+			
+			var x=0
+			while(x<=10){
+				console.log(x)
+				x++
+			}
+			
+			
+			
 		</script>
 	</body>
 </html>
