--- a/oop.html
+++ b/oop.html
@@ -7,23 +7,29 @@
 	<body>
 	</body>
 	<script type="text/javascript">
-//		function Animal(){
-//			
-//		}
-//		Animal.prototype.type="animal";
-//		
-//		function Cat(name){
-//			this.name=name;
-//			this.sayName=function(){
-//				alert("my name is"+this.name)
-//			}
-//		}
-//		var obj = {
-//			kind:"mao",
-//			say:function(){
-//				alert("miao~~~")
-//			}
-//		}
+		function Animal(){
+			
+		}
+		Animal.prototype.type="animal";
+		
+		function Cat(name){
+			this.name=name;
+			this.sayName=function(){
+				alert("my name is"+this.name)
+            }
+            this.setSex = function(sex){
+                this.sex = sex
+            }
+		}
+		var obj = {
+			kind:"mao",
+			say:function(){
+				alert("miao~~~")
+            }
+            
+        }
+        var cat1 = new Cat()
+        cat1.setSex('man')
 //		Cat.prototype=Object.assign(new Animal(),obj)
 		//等同于 Cat.prototype=new Animal(); Object.assign(Cat.prototype,obj)
 //
@@ -31,7 +37,6 @@
 //		mao1.type;
 	</script>
 	<script type="text/javascript">
-<<<<<<< HEAD
 		
 		//判断构造函数直接调用还是new调用方法
 		
@@ -92,8 +97,6 @@
 //		Cat.prototype.kind="mao"
 //		var mao1 = new Cat("man","mao1");	
 //		mao1.type
-	</script>
-=======
 //		class Animal {
 //			constructor(sex){
 //				this.sex=sex
@@ -113,6 +116,8 @@
 //		Cat.prototype.kind="mao"
 //		var mao1 = new Cat("man","mao1");	
 //		mao1.type
+	</script>
+
 	</script>
 	<script type="text/javascript">
 		function Person (){}
@@ -141,5 +146,4 @@
 		Man.__proto__ == Person
 		debugger
 </script>
->>>>>>> 881058c24cf1b672fd6ba44b05d10f70386bfca9
 </html>
