--- a/demo/throw error.html
+++ b/demo/throw error.html
@@ -8,13 +8,14 @@
 		<script type="text/javascript">
 //			throw new Error('错误')
 			
-			try{
-				alert(a)
-			}catch(e){
-//				throw  e.message
-				console.log(e)
-			}
-			console.log(123)
+//			try{
+//				alert(a)
+//			}catch(e){
+////				throw  e.message
+//				console.log(e)
+//			}
+//			console.log(123)
+		console.log(1,Object)
 		</script>
 	</body>
 </html>
