--- a/es6/扩展.html
+++ b/es6/扩展.html
@@ -8,5 +8,13 @@
 	</body>
 	<script type="text/javascript">
 		
+		function doSome(...a){
+			
+		}
+		let params = {
+			name:"xiehla",
+			value:22
+		}
+		doSome(1,2,3)
 	</script>
 </html>
