--- a/css/rem.html
+++ b/css/rem.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="UTF-8">
+		<meta charset="utf-8">
 		<title></title>
+		<style type="text/css">
+			html{
+				/* font-size: 16px; */
+			}
+			h1{
+				font-size: 1rem;
+				height: 2rem;
+				padding: 0;
+			}
+		</style>
 	</head>
 	<body>
-		<h1>这是标题</h1>
-		<p>这是内容</p>
+		<h1>1rem文字大小</h1>
 	</body>
+	<script type="text/javascript">
+		//设置rem值 也就是 html的fontsize
+		document.documentElement.style.fontSize = '32px';
+	</script>
 </html>
