--- a/es6/扩展.html
+++ b/es6/扩展.html
@@ -7,6 +7,18 @@
 	<body>
 	</body>
 	<script type="text/javascript">
+// 		var arr1 = [1,2,{value:3},4];
+// 		
+// 		var arr2 = [...arr1];
+// 		
+// 		arr1[0] = "1";
+// 		arr1[2].value = "3";
+// 		
+// 		console.log(arr2)
 		
+		// const {a,b,c} = [1,2,3]//错误
+		// const [a,b,c] = [1,2,3]//正确
+		const {name,b,c} = {name:1,age:23}//name:1
+		const {name:nameValue,b,c} = {name:1,age:23}//nameValue:1
 	</script>
 </html>
