--- a/闭包.html
+++ b/闭包.html
@@ -24,19 +24,22 @@
 	</script>
 	<script type="text/javascript">
 		//		3:封装js模块
-		var module = function(){
-			var name="aa"
+		// var module = function(){
+		// 	var name="aa"
 			
-			function dosomeshing(){
+		// 	function dosomeshing(){
 				
-			}
+		// 	}
 			
-			return {
-			   fun1:function(){
+		// 	return {
+		// 	   fun1:function(){
 			   		
-			   }
-			}
+		// 	   }
+		// 	}
 			
-		}()
+		// }()
+	</script>
+	<script type="text/javascript">
+		
 	</script>
 </html>
