--- a/es6/class.html
+++ b/es6/class.html
@@ -7,31 +7,51 @@
 	<body>
 	</body>
 	<script type="text/javascript">
-		class Animal{
-			constructor(){
-				this.extent="动物界"
-			}
-			animation(){
-				alert(this.extent)
-			}
-		}
+		// class Animal{
+		// 	constructor(){
+		// 		this.extent="动物界"
+		// 	}
+		// 	animation(){
+		// 		alert(this.extent)
+		// 	}
+		// }
 		
-		class Person extends Animal{
-			constructor(name){
-				super();
-				this.kinds="人类";
-				this.name = name;
-			}
-			think(){
-				alert("我可以思考")
-			}
-			how(){
-				alert(this.name)
-			}
-		}
+		// class Person extends Animal{
+		// 	constructor(name){
+		// 		super();
+		// 		this.kinds="人类";
+		// 		this.name = name;
+		// 	}
+		// 	think(){
+		// 		alert("我可以思考")
+		// 	}
+		// 	how(){
+		// 		alert(this.name)
+		// 	}
+		// }
 		
-		var song = new Person("宋立冬")
-		song.how()
+		// var song = new Person("宋立冬")
+		// song.how()
 		
+		// class Foo{
+		// 	static name = "xhl";
+		// 	constructor(){
+		// 		this.say();
+		// 	}
+		// 	say(){
+		// 		console.log(1)
+		// 	}
+		// }
+		
+		// var foo = new Foo()
+		// console.log(Foo.name)
+		
+		var arr = [0,1];
+		
+		arr.xhl = "000"
+		
+		arr.map(item=>{
+			console.log(item)
+		})//0,1
 	</script>
 </html>
