--- a/es6/generator.html
+++ b/es6/generator.html
@@ -5,7 +5,24 @@
 		<title></title>
 	</head>
 	<body>
-		<script src="generrator.js" type="text/javascript" charset="utf-8"></script>
-		
+<script type="text/javascript">
+	function* test(){
+	 yield 'hello'
+	 yield 'word'
+	 return 'end'
+	}
+	
+	const a = test()
+	console.log(a.next())
+	console.log(a.next())
+	console.log(a.next())
+	// console.log(a.next())
+	
+	//异步
+	// function* test(){
+	//     console.log(123)
+	// }
+	
+</script>	
 	</body>
 </html>
