--- a/面向对象/oop.html
+++ b/面向对象/oop.html
@@ -136,13 +136,14 @@
 //		song.__proto__ = man
 //		等同于
 //		Object.setPrototypeOf(song,man)
-		function Man (){}
-		Man.prototype = new Person()
-		
-		var song = new Man()
-		
-		song.__proto__.__proto__ == Person.prototype
-		Man.__proto__ == Person
-		debugger
+//		function Man (){}
+//		Man.prototype = new Person()
+//		
+//		var song = new Man()
+//		
+//		song.__proto__.__proto__ == Person.prototype
+//		Man.__proto__ == Person
+
 </script>
+
 </html>
