--- a/es6/generator.html
+++ b/es6/generator.html
@@ -13,10 +13,11 @@
 	}
 	
 	const a = test()
+	debugger
 	console.log(a.next())
 	console.log(a.next())
 	console.log(a.next())
-	// console.log(a.next())
+	console.log(a.next())
 	
 	//异步
 	// function* test(){
