--- a/基础类型/对象俩种属性1数据属性2访问器属性.html
+++ b/基础类型/对象俩种属性1数据属性2访问器属性.html
@@ -9,7 +9,7 @@
 	<script type="text/javascript">
 		//一：数据属性(可以读取、写入)
 		
-		var obj={
+/*		var obj={
 			age:10//这种方式定义属性三个特征默认都为true,value默认为undefined，即：可删除/定义、可写、可枚举、可赋值
 		}
 		
@@ -22,7 +22,7 @@
 			enumerable:true,//可枚举
 			
 			value:"aa"//属性值
-		})
+		})*/
 		
 	</script>
 	<script type="text/javascript">
