--- a/易错点/var a和window.a区别.html
+++ b/易错点/var a和window.a区别.html
@@ -11,14 +11,18 @@
 		
 		var a = 1
 		window.b = 2
-		
-		delete window.a//不能删除
-		delete window.b//删除window.b
+		console.log(window)
+		 // console.log(a)//1
+		 // console.log(b)//2
+		//  console.log(window.a)//1
+		//  console.log(window.b)//2
+		// delete window.a//不能删除
+		// delete window.b//删除window.b
 		// delete b //删除window.b
 		
-		console.log(a)//1
-		console.log(b)//报错
-		
+		// console.log(a)//1
+		// console.log(b)//报错
+
 		
 		/* 总结： */
 		
