--- a/es6/array.html
+++ b/es6/array.html
@@ -12,6 +12,7 @@
 //		includes    判断是否包含某个元素,indexOf的替身 //["a","b"].includes("a")//0
 //		of 			转化数组方法，Array()优化版//   Array.of(2)  //[2]
 //		from		将一个类数组和可遍历对象转化为数组  //Array.from('abc') //['a','b','c']
+//		sort		返回一个排序数组，不改变原数组
 		let arr = [1,2,3];
 //		let result = arr.reduce((prev, cur, index, arr)=> {
 //		    return prev + cur;
@@ -58,5 +59,25 @@
 			console.log(item.age)
 		}
 		//10,12
+		
+		/* 
+		forEach 
+		*/
+		// const arr2 = [0,1,2,'a']
+		// let sum = 0
+		// arr2.forEach(item=>{
+		// 	if(typeof item !== 'number'){
+		// 		return
+		// 	}
+		// 	sum+=item
+		// })
+		// console.log(sum)
+		
+		/* 
+		 sort:返回一个排序数组，不改变原数组
+		 */
+		// var arr3 = [1,5,9,2,4]
+		// var result =  arr3.sort((a,b)=>(a-b))
+		// console.log(arr3)
 	</script>
 </html>
