--- a/我的主页/绚丽背景.html
+++ b/我的主页/绚丽背景.html
@@ -2,22 +2,16 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<title></title>
 		<style type="text/css">
-			html,body{
-				margin: 0;
-				padding: 0;
-				height: 100%;
-			}
 			.bg{
-				height: 100%;
 				background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
 				background-repeat: no-repeat;
 				background-position:0%;
 				background-size:400% ;
 				animation: bgMove 15s ease infinite;
 			}
-			
 			@keyframes  bgMove{
 				from{
 					background-position:0%;
@@ -30,8 +24,73 @@
 				}
 			}
 		</style>
+		<style type="text/css">
+			html,body{
+				margin: 0;
+				padding: 0;
+			}
+			body{
+				height: 100vh;
+				width: 100vw;
+				overflow: hidden;
+			}
+			.barrage{
+				position: fixed;
+				color: #fff;
+				font-size: 20px;
+				transform: translateX(100vw);
+				animation: xmove 5s linear;
+			}
+			button{
+				width:160px;
+				height: 48px;
+				text-align: center;
+				border: none;
+				/* color: #fff; */
+				line-height: 48px;
+				font-size: 20px;
+				position: fixed;
+				bottom: 48px;
+				left: 0;
+				right: 0;
+				margin: auto;
+				background: rgba(0, 0, 0, 0.490521);
+				border-radius: 48px;
+				outline: none;
+			}
+			@keyframes  xmove{
+				from{
+					transform: translateX(100vw);
+				}
+				to{
+					transform: translateX(-15vw);
+				}
+			}
+		</style>
 	</head>
-	<body>
-		<div class="bg"></div>
+	<body class="bg">
+		<button onclick="send()">发射弹幕</button>
 	</body>
+	<script type="text/javascript">
+		var body = document.body;
+		var screenHeight = window.screen.height;
+		
+		function send(){
+			appendSpan()
+		}
+		
+		function appendSpan(){
+			var span = document.createElement("span")
+			span.className = "barrage"
+			var range = screenHeight/2;
+			span.style.top=parseInt(Math.random()*range/20)*20+'px'
+			span.innerText="海龙最帅"
+			body.appendChild(span)
+			let timer = window.setTimeout(function(){
+				body.removeChild(span)
+				window.clearTimeout(timer)
+			},5000)
+		}
+		
+	</script>
 </html>
