add:网站被关闭事件

--- a/es6/array.html
+++ b/es6/array.html
@@ -76,8 +76,11 @@
 		/* 
 		 sort:返回一个排序数组，不改变原数组
 		 */
-		// var arr3 = [1,5,9,2,4]
-		// var result =  arr3.sort((a,b)=>(a-b))
-		// console.log(arr3)
+		var arr3 = [1,5,9,2,4]
+		var result =  arr3.sort((a,b)=>{
+			debugger
+			return a-b
+		})
+		console.log(arr3)
 	</script>
 </html>
